# ray-tracing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
gl_libs/: glad.c
my_classes/: Png_Image.h  mesh.h  model.h  types.h
physics/: sphere.h
render/: camera.h  hittable.h  hittable_list.h  material.h  ray.h  skybox.h  sphere.h
texture/: material.h
utils/: Png_Image.h  camera.h  utility.h
